@@ -5,6 +5,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - changes needed to allow relocatable checkpoint jobs. Job checkpoint files
       are now under the control of the server.
   c - check filename for NULL to prevent crash
+  b - changed so we don't try to copy a local file when the destination is a
+      directory and the file is already in that directory
 
 2.4.0
   f - added a "-q" option to pbs_mom which does *not* perform the default -p 
